--- a/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Collatz", "CollatzCreate", "Collatz")</li>
+                    <li>@Html.ActionLink("Bissexto", "BissextoCreate", "Bissexto")</li>
                 </ul>
             </div>
         </div>
