--- a/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Collatz", "CollatzCreate", "Collatz")</li>
                     <li>@Html.ActionLink("Bissexto", "BissextoCreate", "Bissexto")</li>
+                    <li>@Html.ActionLink("Estatisticas", "EstatisticasCreate", "Estatisticas")</li>
                 </ul>
             </div>
         </div>
