--- a/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Collatz", "CollatzCreate", "Collatz")</li>
                     <li>@Html.ActionLink("Bissexto", "BissextoCreate", "Bissexto")</li>
                     <li>@Html.ActionLink("Estatisticas", "EstatisticasCreate", "Estatisticas")</li>
+                    <li>@Html.ActionLink("Entradas no Banco", "EntradasBancoCreate", "EntradasBanco")</li>
                 </ul>
             </div>
         </div>
