Escrevendo no Celular / Melhora de texto e comentários

--- a/DojoPuzzles/DojoPuzzles/Views/Collatz/CollatzCreate.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Collatz/CollatzCreate.cshtml
@@ -11,10 +11,10 @@
             Para definir uma seqüência a partir de um número inteiro o positivo, temos as seguintes regras:
             <br />n → n/2 (n é par)
             <br />n → 3n + 1 (n é ímpar)
-            <br />Usando a regra acima e iniciando com o número 13, geramos a seguinte seqüência:
+            <br /><br />Usando a regra acima e iniciando com o número 13, geramos a seguinte seqüência:
             <br />13 → 40 → 20 → 10 → 5 → 16 → 8 → 4 → 2 → 1
-            <br />Podemos ver que esta seqüência (iniciando em 13 e terminando em 1) contém 10 termos. Embora ainda não tenha sido provado (este problema é conhecido como Problema de Collatz), sabemos que com qualquer número que você começar, a seqüência resultante chega no número 1 em algum momento.
-            <br />Desenvolva um programa que descubra qual o número inicial entre 1 e 1 milhão que produz a maior seqüência.
+            <br /><br />Podemos ver que esta seqüência (iniciando em 13 e terminando em 1) contém 10 termos. Embora ainda não tenha sido provado (este problema é conhecido como Problema de Collatz), sabemos que com qualquer número que você começar, a seqüência resultante chega no número 1 em algum momento.
+            <br /><br />Desenvolva um programa que descubra qual o número inicial entre 1 e 1 milhão que produz a maior seqüência.
         </p>
 
         <hr />
