--- a/DojoPuzzles/DojoPuzzles/Views/Estatisticas/EstatisticasCreate.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Estatisticas/EstatisticasCreate.cshtml
@@ -13,7 +13,7 @@
             <br />+ Valor máximo
             <br />+ Número de elementos na seqüência
             <br />+ Valor médio
-            <br />Por exemplo para uma seqüência de números "6,9,15,-2,92,11", temos como saída:
+            <br /><br />Por exemplo para uma seqüência de números "6,9,15,-2,92,11", temos como saída:
             <br />+ Valor mínimo: -2
             <br />+ Valor máximo: 92
             <br />+ Número de elementos na seqüência: 6
