--- a/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Bissexto", "BissextoCreate", "Bissexto")</li>
                     <li>@Html.ActionLink("Estatisticas", "EstatisticasCreate", "Estatisticas")</li>
                     <li>@Html.ActionLink("Entradas no Banco", "EntradasBancoCreate", "EntradasBanco")</li>
+                    <li>@Html.ActionLink("Escrevendo no Celular", "EscrevendoCelularCreate", "EscrevendoCelular")</li>
                 </ul>
             </div>
         </div>
