--- a/DojoPuzzles/DojoPuzzles/Views/EntradasBanco/EntradasBancoCreate.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/EntradasBanco/EntradasBancoCreate.cshtml
@@ -8,9 +8,9 @@
         <h2>Entradas no Banco</h2>
         <p>
             Todas as vezes que alguém passa na porta do maior banco da cidade de Pirenópolis, é gravado em um arquivo de log a data e a hora da abertura da porta.
-            <br />Cada registro no arquivo de log possui o seguinte formato:
+            <br /><br />Cada registro no arquivo de log possui o seguinte formato:
             <br />[YYYY-mm-dd H:i:s] - Abertura da Porta OK
-            <br />O gerente do banco precisa saber quantas pessoas entraram no banco no horário de expediente, para isso ele solicitou que você faça um programa que verifique se o registro de entrada é válido e se a hora se encontra dentro do intervalo de funcionamento do banco, das 10:00:00 até as 16:00:00.
+            <br /><br />O gerente do banco precisa saber quantas pessoas entraram no banco no horário de expediente, para isso ele solicitou que você faça um programa que verifique se o registro de entrada é válido e se a hora se encontra dentro do intervalo de funcionamento do banco, das 10:00:00 até as 16:00:00.
         </p>
         <hr />
         <p>
