--- a/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
@@ -22,11 +22,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Collatz", "CollatzCreate", "Collatz")</li>
-                    <li>@Html.ActionLink("Bissexto", "BissextoCreate", "Bissexto")</li>
-                    <li>@Html.ActionLink("Estatisticas", "EstatisticasCreate", "Estatisticas")</li>
+                    <li>@Html.ActionLink("Analisando a conjectura de Collatz", "CollatzCreate", "Collatz")</li>
+                    <li>@Html.ActionLink("Ano Bissexto", "BissextoCreate", "Bissexto")</li>
+                    <li>@Html.ActionLink("Calculando estatísticas simples", "EstatisticasCreate", "Estatisticas")</li>
                     <li>@Html.ActionLink("Entradas no Banco", "EntradasBancoCreate", "EntradasBanco")</li>
                     <li>@Html.ActionLink("Escrevendo no Celular", "EscrevendoCelularCreate", "EscrevendoCelular")</li>
+                    <li>@Html.ActionLink("FizzBuzz", "FizzBuzzCreate", "FizzBuzz")</li>
                 </ul>
             </div>
         </div>
