--- a/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                                     <li>@Html.ActionLink("Analisando a conjectura de Collatz", "CollatzCreate", "Collatz")</li>
                                     <li>@Html.ActionLink("Ano Bissexto", "BissextoCreate", "Bissexto")</li>
                                     <li>@Html.ActionLink("Calculando estatísticas simples", "EstatisticasCreate", "Estatisticas")</li>
+                                    <li>@Html.ActionLink("Encontre o telefone", "EncontreTelefoneCreate", "EncontreTelefone")</li>
                                     <li>@Html.ActionLink("Entradas no Banco", "EntradasBancoCreate", "EntradasBanco")</li>
                                     <li>@Html.ActionLink("Escrevendo no Celular", "EscrevendoCelularCreate", "EscrevendoCelular")</li>
                                     <li>@Html.ActionLink("FizzBuzz", "FizzBuzzCreate", "FizzBuzz")</li>
