--- a/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
+++ b/DojoPuzzles/DojoPuzzles/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                                     <li>@Html.ActionLink("Entradas no Banco", "EntradasBancoCreate", "EntradasBanco")</li>
                                     <li>@Html.ActionLink("Escrevendo no Celular", "EscrevendoCelularCreate", "EscrevendoCelular")</li>
                                     <li>@Html.ActionLink("FizzBuzz", "FizzBuzzCreate", "FizzBuzz")</li>
+                                    <li>@Html.ActionLink("Troco", "TrocoCreate", "Troco")</li>
                                 </ul>
                             </div>
                         </li>
